ingresslocal.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ckan-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /$2
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  -  http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: ckan
              port: 
                number: 80
